# 08-bootcamp-py

./: README.md  etl.py  pipeline.py  pyproject.toml
