[project]
name = "08-bootcamp-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonardo Salin",email = "domafras@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pandera (>=0.23.1,<0.24.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
